--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container px-4 px-lg-5">
             <!-- Heading Row-->
             <div class="row gx-4 gx-lg-5 align-items-center my-5">
-                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg" alt="..." /></div>
+                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://cc.tvbs.com.tw/img/upload/2018/08/13/20180813150628-347d7cca.jpg" alt="..." /></div>
                 <div class="col-lg-5">
                     <h1 class="font-weight-light">西門站路線</h1>
                     <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
@@ -47,7 +47,7 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h2 class="card-title">富宏牛肉麵</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                            <p class="card-text">地址：台北市萬華區洛陽街69號<br>電話：02-23713028<br>營業時間：24小時</p>
                         </div>
                         <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://mutal2001.github.io/Food-beef-noodles/">詳細介紹</a></div>
                     </div>
