--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <div class="row gx-4 gx-lg-5 align-items-center my-5">
                 <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://cc.tvbs.com.tw/img/upload/2018/08/13/20180813150628-347d7cca.jpg" alt="..." /></div>
                 <div class="col-lg-5">
-                    <h1 class="font-weight-light">西門站路線</h1>
-                    <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
+                    <h1 class="font-weight-light">捷運西門站</h1>
+                    <p>捷運西門站6號出口，步行大約10分鐘即可到達</p>
                 </div>
             </div>
             <!-- Call to Action-->
