--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container px-4 px-lg-5">
             <!-- Heading Row-->
             <div class="row gx-4 gx-lg-5 align-items-center my-5">
-                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://cc.tvbs.com.tw/img/upload/2018/08/13/20180813150628-347d7cca.jpg" alt="..." /></div>
+                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="Route-beefnoodles.jpg" alt="西門站路線" /></div>
                 <div class="col-lg-5">
                     <h1 class="font-weight-light">捷運西門站</h1>
                     <p>捷運西門站6號出口，步行大約10分鐘即可到達</p>
