--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container px-4 px-lg-5">
             <!-- Heading Row-->
             <div class="row gx-4 gx-lg-5 align-items-center my-5">
-                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/Route-beefnoodles.jpg" alt="西門站路線" /></div>
+                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/Route-beef-noodles.png" alt="西門站路線" /></div>
                 <div class="col-lg-5">
                     <h1 class="font-weight-light">捷運西門站</h1>
                     <p>捷運西門站6號出口，步行大約10分鐘即可到達</p>
@@ -50,24 +50,6 @@
                             <p class="card-text">地址：台北市萬華區洛陽街69號<br>電話：02-23713028<br>營業時間：24小時</p>
                         </div>
                         <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://mutal2001.github.io/Food-beef-noodles/">詳細介紹</a></div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Card Two</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
-                        </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Card Three</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-                        </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
                     </div>
                 </div>
             </div>
